# Obsidian-Fault-Script

./: .gitattributes  .gitignore  .tmp_array_test.ofs  OFS_COMPILER_ROADMAP.md  OFS_JORNADA_INICIANTE.md  README.en.md  README.md  README.pt-BR.md  ROADMAP.md  STATUS_REPORT.md  ofs-vscode-extension-local-test.vsix
.github/: secret_scanning.yml
.github/workflows/: build.yml  publish-libraries.yml  publish-vscode-extension.yml  release-native.yml  release.yml  roadmap-gate.yml  selfhosted-release.yml
.pkg-publish/memory-modes/: README.md  package.json
.pkg-publish/terminal-colors/: README.md  package.json
docs/: BOOTSTRAP.md  CHANGELOG.md  COMPILED_LANGUAGE.md  COMPILER_ARCHITECTURE.md  GETTING_STARTED.md  GITHUB_REGISTRATION.md  LANGUAGE_REFERENCE.md  LOW_LEVEL_ROADMAP.md
ofs/: CMakeLists.txt
ofs/docs/: BAREMETAL_PROFILE.md  README_BAREMETAL.md
ofs/examples/: attach_file_demo.ofs  attach_local_lib.ofs  baremetal_minimal.ofs  bedrock_gateway.ofs  calculator.ofs  canvas_package_demo.ofs  canvas_window_demo.ofs  collections.ofs  extern_func.ofs  factorial.ofs  fizzbuzz.ofs  fmt_demo.ofs  hello.ofs  hybrid_fault_console.ofs  math_ops.ofs  monolith_advanced.ofs  packages_demo.ofs  pointers.ofs  recursion.ofs  showcase.ofs  small_ints.ofs  string_ops.ofs  structs.ofs  test_webserver_simple.ofs  type_cast.ofs  variables.ofs  webserver_demo.ofs  while_loop.ofs
ofs/ofscc/: README.md  ast.ofs  chars.ofs  codegen.ofs  fileio.ofs  lexer.ofs  nodes.ofs  ofscc.ofs  parser.ofs  symbols.ofs  symtable.ofs  test_bootstrap.sh  test_bootstrap_windows.ps1  test_lexer_basic.ofs  test_lexer_parser.ofs  test_lexer_units.ofs  tokens.ofs  typeck.ofs
ofs/src/: i18n.hpp  main.cpp
ofs/src/ast/: ast.hpp  ast_printer.hpp
ofs/src/codegen/: codegen.cpp  codegen.hpp
ofs/src/lexer/: lexer.cpp  lexer.hpp  token.hpp
ofs/src/parser/: parser.cpp  parser.hpp
ofs/src/runtime/: ofs_runtime.c  ofs_runtime.h  ofs_window.cpp
ofs/src/semantic/: semantic.cpp  semantic.hpp  type_system.cpp  type_system.hpp
ofs/stdlib/: bedrock_packet.ofs  canvas.ofs  io.ofs  math.ofs  memory_modes.ofs  rift.ofs  string.ofs  terminal_colors.ofs  window.ofs
ofs/tests/: test_lexer.cpp  test_parser.cpp  test_semantic.cpp
ofscc/: README.md  ROADMAP.md  ast.ofs  chars.ofs  lexer.ofs  nodes.ofs  ofscc.ofs  parser.ofs  test_lexer_basic.ofs  test_lexer_parser.ofs  tokens.ofs  typeck.ofs
ofscc/scripts/: COMECE_AQUI.md  INDEX.md  MIGRATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  RELEASES_SUMMARY.md  (+14 more)
packaging/: installer_generator.ofs
scripts/: roadmap_completion.ps1
vscode-extension/: .vscodeignore  README.en.md  README.md  README.pt-BR.md  obsidian-fault-script-0.1.0.vsix  obsidian-fault-script-1.0.4.vsix  package-lock.json  package.json
(+18 files in other folders)
